--- a/app/globals.css
+++ b/app/globals.css
@@ -85,6 +85,23 @@
   }
 }
 
+/* Noto Sans Regular */
+@font-face {
+  font-family: "Noto Sans";
+  src: url("/fonts/NotoSans-VariableFont_wdth,wght.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+/* Italic versions */
+@font-face {
+  font-family: "Noto Sans";
+  src: url("/fonts/NotoSans-Italic-VariableFont_wdth,wght.ttf") format("ttf");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
 html {
   overflow-x: hidden;
   overflow-y: overlay;
@@ -93,7 +110,7 @@ html {
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Noto Sans, Arial, Helvetica, sans-serif;
 }
 
 .dark {
