--- a/app/globals.css
+++ b/app/globals.css
@@ -110,6 +110,7 @@ html {
 body {
   background: var(--background);
   color: var(--foreground);
+  --default-font-family: "Noto Sans", Arial, Helvetica, sans-serif;
   font-family: Noto Sans, Arial, Helvetica, sans-serif;
 }
 
